--- a/rockPaperScissors-back/rockPaperScissors/src/main/resources/application-local.yml
+++ b/rockPaperScissors-back/rockPaperScissors/src/main/resources/application-local.yml
@@ -1,6 +1,6 @@
 # SERVER
 server:
-  port: ${SERVER_PORT:0}
+  port: 56578
   servlet:
     contextPath: /api/v1
 
@@ -15,6 +15,18 @@ spring:
     throw-exception-if-no-handler-found: true
   resources:
     add-mappings: false
+  datasource:
+    url: ${dbURL}
+    username: ${dbUsername}
+    password: ${dbPassword}
+  jpa:
+    hibernate:
+      ddl-auto: update
+      show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
+
   main:
     allow-bean-definition-overriding: true
 
