--- a/rockPaperScissors-back/rockPaperScissors/src/main/resources/application-local.yml
+++ b/rockPaperScissors-back/rockPaperScissors/src/main/resources/application-local.yml
@@ -42,6 +42,10 @@ management:
 #logging.level.org.springframework.web.servlet.mvc.method.annotation.HttpEntityMethodProcessor: DEBUG
 #logging.level.ROOT: DEBUG
 
+jwt:
+  secretKey: ${jwtSecretKey}}
+  refreshSecretKey: ${jwtRefreshSecretKey}}
+
 timeouts:
   MAX_TOTAL_CONNECTIONS: 5
   CONNECT_TIMEOUT: 9000
