--- a/rockPaperScissors-front/angular.json
+++ b/rockPaperScissors-front/angular.json
@@ -42,8 +42,7 @@
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss",
-              "node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "https://fonts.googleapis.com/icon?family=Material+Icons"
+              "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
             ],
             "scripts": []
           },
