--- a/rockPaperScissors-front/tsconfig.json
+++ b/rockPaperScissors-front/tsconfig.json
@@ -22,7 +22,10 @@
       "es2018",
       "dom"
     ],
-    "useDefineForClassFields": false
+    "useDefineForClassFields": false,
+    "typeRoots": [
+      "node_modules/@types"
+    ]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
